Alteração de aplicação dos modulos em classes e injeção de modulos
